--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "rimraf": "^2.6.2",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.1",
+    "minimist": ">=1.2.2"
   },
   "nyc": {
     "extension": [
